@@ -1,4 +1,5 @@
 3.0.10
+ * Make stress use client mode to avoid checking commit log size on startup (CASSANDRA-12478)
  * Fix failure in LogTransactionTest (CASSANDRA-12632)
  * Fix potentially incomplete non-frozen UDT values when querying with the
    full primary key specified (CASSANDRA-12605)
